# lan-classroom-control

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  UV_RUN.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
common/: config.py  crypto.py  discover.py  file_transfer.py  heartbeat.py  logger.py  protocol.py  screen_capture.py  tcp_conn.py  version.py
student/: main.py
student/core/: autostart.py  input_blocker.py  net_control.py  student_client.py  update_client.py
student/ui/: overlay.py
teacher/: main.py
teacher/core/: file_distributor.py  screen_broadcast.py  student_manager.py  teacher_server.py  update_server.py
teacher/ui/: main_window.py
tests/: test_config.py  test_crypto.py  test_discover.py  test_file_transfer.py  test_heartbeat.py  test_input_blocker.py  test_integration.py  test_net_control.py  test_protocol.py  test_student_manager.py  test_tcp_connection.py  test_update.py
