[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lan-classroom-control"
version = "1.0.7"
description = "LAN classroom control system with teacher and student clients."
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "PyQt5>=5.15.0,<5.16",
    "PyQt5-Qt5==5.15.2",
    "mss>=9.0.1",
    "Pillow>=10.0.0,<10.2.0",
    "pynput>=1.7.6",
    "pycryptodome>=3.19.0",
    "numpy>=1.24.0,<2.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
teacher = "teacher.main:main"
student = "student.main:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]
build = [
    "pyinstaller>=6.0.0,<7.0.0",
]

[tool.setuptools.packages.find]
include = ["common*", "teacher*", "student*"]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
]
